# data-models-postgres

./: .pre-commit-config.yaml  README.md  docker-compose.yml  env.yml  pyproject.toml
data/song_data/A/A/C/: TRAACER128F4290F96.json  TRAACFV128F935E50B.json
data/song_data/A/B/A/: TRABAFJ128F42AF24E.json  TRABAFP128F931E9A1.json  TRABATO128F42627E9.json  TRABAXL128F424FC50.json  TRABAXR128F426515F.json
data/song_data/A/B/B/: TRABBKX128F4285205.json  TRABBNP128F932546F.json
data/song_data/A/B/C/: TRABCIX128F4265903.json  TRABCTK128F934B224.json
db-data/: postmaster.pid
db-data/base/13757/: pg_internal.init
db-data/base/16384/: pg_internal.init
db-data/global/: 1260  1262  2671  2672  pg_control  pg_internal.init
db-data/pg_stat_tmp/: db_0.stat  db_16384.stat  global.stat
models/: manager.py
